--- a/scss/globals/_typography.scss
+++ b/scss/globals/_typography.scss
@@ -8,10 +8,45 @@ h3 {
 
 p {
 	margin-top: 0;
+	margin-bottom: 0;
 }
 
 a,
 a:visited,
 a:active {
 	//text-decoration: none;
+}
+
+#score {
+	background-color: var(--background-color);
+	width: 80%;
+	margin-inline: auto;
+	// padding-top: 5px;
+	// padding-bottom: 5px;
+}
+
+button.add {
+	color: green;
+}
+
+button.minus {
+	color: red;
+}
+
+button.add,
+button.minus {
+	font-size: 2em;
+	background-color: transparent;
+	width: 50%;
+	margin-inline: auto;
+	cursor: pointer;
+	text-align: center;
+	border: 0;
+}
+
+button.add:hover,
+button.minus:hover {
+	background-color: rgb(237, 199, 152);
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+		0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
