--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -36,6 +36,7 @@
 			margin-inline: auto;
 			text-align: center;
 			padding-top: 5px;
+			padding-bottom: 5px;
 			background-color: rgb(163, 111, 14);
 			border: 3px solid black;
 		}
@@ -62,4 +63,18 @@
 	// &__cell {
 	// 	border-style: solid;
 	// }
+}
+
+.score-controls {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 1fr;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	.add {
+		grid-area: 1 / 1 / 2 / 2;
+	}
+	.minus {
+		grid-area: 1 / 2 / 2 / 3;
+	}
 }
