--- a/scss/globals/_typography.scss
+++ b/scss/globals/_typography.scss
@@ -9,6 +9,7 @@ h3 {
 p {
 	margin-top: 0;
 	margin-bottom: 0;
+	line-height: 1.2;
 }
 
 a,
@@ -37,8 +38,8 @@ button.add,
 button.minus {
 	font-size: 2em;
 	background-color: transparent;
-	width: 50%;
-	margin-inline: auto;
+	//width: 50%;
+	//margin-inline: auto;
 	cursor: pointer;
 	text-align: center;
 	border: 0;
