--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -11,29 +11,37 @@
 
 	&__header {
 		grid-area: 1 / 1 / 2 / 6;
-		margin-inline: auto;
+		//margin-inline: auto;
 		padding-top: 3rem;
+		background-color: aqua;
 	}
 	&__main {
 		grid-area: 2 / 1 / 5 / 6;
+		background-color: coral;
 	}
 	&__footer {
 		grid-area: 5 / 1 / 6 / 6;
-		margin-inline: auto;
-		padding-top: 3rem;
+		background-color: rgb(107, 28, 116);
+		//margin-inline: auto;
+		padding-top: 2rem;
+		//position: absolute;
 
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-template-rows: 1fr;
-		grid-column-gap: 0px;
-		grid-row-gap: 0px;
+		//display: grid;
+		// grid-template-columns: repeat(3, 1fr);
+		// grid-template-rows: 1fr;
+		// grid-column-gap: 0px;
+		// grid-row-gap: 0px;
 
-		width: 500px;
+		display: flex;
+		justify-content: center; //alignment of main axis (horizontal)
+		align-items: center; //alignment of cross axis (vertical)
+
+		//width: 500px;
 
 		&__player1 {
-			grid-area: 1 / 1 / 2 / 2;
+			//grid-area: 1 / 1 / 2 / 2;
 			width: 160px;
-			margin-inline: auto;
+			//margin-inline: auto;
 			text-align: center;
 			padding-top: 5px;
 			padding-bottom: 5px;
@@ -41,9 +49,9 @@
 			border: 3px solid black;
 		}
 		&__player2 {
-			grid-area: 1 / 2 / 2 / 3;
+			//grid-area: 1 / 2 / 2 / 3;
 			width: 160px;
-			margin-inline: auto;
+			//margin-inline: auto;
 			text-align: center;
 			padding-top: 5px;
 			background-color: rgb(163, 111, 14);
@@ -52,7 +60,16 @@
 		&__player3 {
 			grid-area: 1 / 3 / 2 / 4;
 			width: 160px;
-			margin-inline: auto;
+			//margin-inline: auto;
+			text-align: center;
+			padding-top: 5px;
+			background-color: rgb(163, 111, 14);
+			border: 3px solid black;
+		}
+		&__player4 {
+			grid-area: 1 / 4 / 2 / 5;
+			width: 160px;
+			//margin-inline: auto;
 			text-align: center;
 			padding-top: 5px;
 			background-color: rgb(163, 111, 14);
@@ -66,15 +83,27 @@
 }
 
 .score-controls {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 1fr;
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-	.add {
-		grid-area: 1 / 1 / 2 / 2;
-	}
-	.minus {
-		grid-area: 1 / 2 / 2 / 3;
-	}
+	// display: grid;
+	// grid-template-columns: repeat(2, 1fr);
+	// grid-template-rows: 1fr;
+	// grid-column-gap: 0px;
+	// grid-row-gap: 0px;
+	// .add {
+	// 	grid-area: 1 / 1 / 2 / 2;
+	// }
+	// .minus {
+	// 	grid-area: 1 / 2 / 2 / 3;
+	// }
+}
+
+.player {
+	background-color: brown;
+	padding: 10px;
+	text-align: center;
+}
+
+.teamName {
+	font-weight: bold;
+	border: 3px solid black;
+	border-style: none none solid none;
 }
