--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -3,7 +3,7 @@
 	grid-template-columns: repeat(5, 1fr);
 	grid-template-rows: repeat(5, 1fr);
 	grid-column-gap: 0px;
-	grid-row-gap: 0px;
+	grid-row-gap: 20px;
 
 	//max-width: 1100px;
 	width: min(100% - 40px, 1100px);
@@ -11,19 +11,20 @@
 
 	&__header {
 		grid-area: 1 / 1 / 2 / 6;
-		//margin-inline: auto;
+		margin-inline: auto;
 		padding-top: 3rem;
-		background-color: aqua;
+		//background-color: aqua;
 	}
 	&__main {
 		grid-area: 2 / 1 / 5 / 6;
-		background-color: coral;
+		//background-color: coral;
 	}
 	&__footer {
 		grid-area: 5 / 1 / 6 / 6;
-		background-color: rgb(107, 28, 116);
+		grid-column-gap: 30px;
+		//background-color: rgb(107, 28, 116);
 		//margin-inline: auto;
-		padding-top: 2rem;
+		//padding-top: 2rem;
 		//position: absolute;
 
 		//display: grid;
@@ -35,46 +36,7 @@
 		display: flex;
 		justify-content: center; //alignment of main axis (horizontal)
 		align-items: center; //alignment of cross axis (vertical)
-
-		//width: 500px;
-
-		&__player1 {
-			//grid-area: 1 / 1 / 2 / 2;
-			width: 160px;
-			//margin-inline: auto;
-			text-align: center;
-			padding-top: 5px;
-			padding-bottom: 5px;
-			background-color: rgb(163, 111, 14);
-			border: 3px solid black;
-		}
-		&__player2 {
-			//grid-area: 1 / 2 / 2 / 3;
-			width: 160px;
-			//margin-inline: auto;
-			text-align: center;
-			padding-top: 5px;
-			background-color: rgb(163, 111, 14);
-			border: 3px solid black;
-		}
-		&__player3 {
-			grid-area: 1 / 3 / 2 / 4;
-			width: 160px;
-			//margin-inline: auto;
-			text-align: center;
-			padding-top: 5px;
-			background-color: rgb(163, 111, 14);
-			border: 3px solid black;
-		}
-		&__player4 {
-			grid-area: 1 / 4 / 2 / 5;
-			width: 160px;
-			//margin-inline: auto;
-			text-align: center;
-			padding-top: 5px;
-			background-color: rgb(163, 111, 14);
-			border: 3px solid black;
-		}
+		//margin: 10px;
 	}
 
 	// &__cell {
@@ -97,13 +59,20 @@
 }
 
 .player {
-	background-color: brown;
-	padding: 10px;
+	background-color: rgb(11, 23, 83);
+	padding: 10px 30px 10px 30px;
 	text-align: center;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .teamName {
 	font-weight: bold;
-	border: 3px solid black;
+	border: 3px solid rgb(227, 196, 196);
 	border-style: none none solid none;
+}
+
+#score {
+	margin-top: 10px;
+	padding: 5px;
+	background-color: rgba(222, 161, 48, 0.55);
 }
