--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -17,6 +17,7 @@
 	}
 	&__main {
 		grid-area: 2 / 1 / 5 / 6;
+		height: 100%;
 		//background-color: coral;
 	}
 	&__footer {
@@ -37,6 +38,15 @@
 		justify-content: center; //alignment of main axis (horizontal)
 		align-items: center; //alignment of cross axis (vertical)
 		//margin: 10px;
+	}
+	&__modal {
+		//grid-area: 2 / 1 / 5 / 6;
+		//background-color: black;
+		z-index: 10;
+	}
+	&__main,
+	&__modal {
+		grid-area: 2 / 1 / 5 / 6;
 	}
 
 	// &__cell {
