changed color scheme

--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -1,4 +1,8 @@
 :root {
-	--background-color: rgb(26, 95, 160);
-	--text-color: white;
+	--background-color: #fffffe;
+	--text-color-dark: #094067;
+	--text-color-light: #fffffe;
+	--primary-color: #3da9fc;
+	--table-header-background-color: #094067;
+	--table-background-color: #d8eefe;
 }
