--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -24,17 +24,33 @@ table {
 	border-collapse: collapse;
 	table-layout: fixed;
 	width: 100%;
+	margin: 10px auto;
+	color: var(--text-color-light);
+	border-collapse: separate;
+	border-spacing: 6px;
+}
+
+th {
+	background-color: var(--table-header-background-color);
+	color: var(--text-color-light);
 }
 
 th,
 td {
-	border: 3px solid black;
+	//border: 5px solid var(--background-color);
+	border-radius: 12px;
+
 	padding: 1.5rem;
 	text-align: center;
 }
 
+td {
+	background-color: var(--table-background-color);
+	color: var(--text-color-dark);
+}
+
 td:hover {
-	background-color: rgb(133, 23, 170);
+	background-color: var(--primary-color);
 }
 
 .answerShown {
