--- a/scss/globals/_typography.scss
+++ b/scss/globals/_typography.scss
@@ -48,7 +48,7 @@ button.minus {
 
 button.add:hover,
 button.minus:hover {
-	background-color: rgb(237, 199, 152);
+	background-color: var(--primary-color);
 	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
 		0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
