--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -69,20 +69,23 @@
 }
 
 .player {
-	background-color: rgb(11, 23, 83);
+	background-color: var(--table-background-color);
 	padding: 10px 30px 10px 30px;
 	text-align: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 5px;
 }
 
 .teamName {
 	font-weight: bold;
-	border: 3px solid rgb(227, 196, 196);
+	color: var(--text-color-dark);
+	border: 3px solid var(--primary-color);
 	border-style: none none solid none;
 }
 
 #score {
 	margin-top: 10px;
 	padding: 5px;
-	background-color: rgba(222, 161, 48, 0.55);
+	background-color: var(--table-header-background-color);
+	color: var(--text-color-light);
 }
