--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -5,4 +5,5 @@
 	--primary-color: #3da9fc;
 	--table-header-background-color: #094067;
 	--table-background-color: #d8eefe;
+	--color-neutral: hsl(200, 2%, 75%);
 }
