--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -3,7 +3,9 @@
 	grid-template-columns: repeat(5, 1fr);
 	grid-template-rows: repeat(5, 1fr);
 	grid-column-gap: 0px;
-	grid-row-gap: 20px;
+	grid-row-gap: 0px;
+	padding: 2rem;
+	//background-color: yellow;
 
 	//max-width: 1100px;
 	width: min(100% - 40px, 1100px);
@@ -21,7 +23,7 @@
 		//background-color: coral;
 	}
 	&__footer {
-		grid-area: 5 / 1 / 6 / 6;
+		grid-area: 5 / 1 / 7 / 5;
 		grid-column-gap: 30px;
 		//background-color: rgb(107, 28, 116);
 		//margin-inline: auto;
@@ -37,16 +39,21 @@
 		display: flex;
 		justify-content: center; //alignment of main axis (horizontal)
 		align-items: center; //alignment of cross axis (vertical)
+		flex-wrap: wrap; // overflow
 		//margin: 10px;
 	}
 	&__modal {
 		//grid-area: 2 / 1 / 5 / 6;
 		//background-color: black;
 		z-index: 10;
-	}
-	&__main,
-	&__modal {
 		grid-area: 2 / 1 / 5 / 6;
+	}
+	&__footer-side {
+		grid-area: 5 / 5 / 6 / 6;
+		//background-color: greenyellow;
+		margin: auto;
+		// justify-content: center; //alignment of main axis (horizontal)
+		// align-items: center; //alignment of cross axis (vertical)
 	}
 
 	// &__cell {
@@ -74,6 +81,7 @@
 	text-align: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 5px;
+	min-width: 8rem;
 }
 
 .teamName {
@@ -88,4 +96,35 @@
 	padding: 5px;
 	background-color: var(--table-header-background-color);
 	color: var(--text-color-light);
+}
+
+.grid__footer-side > button {
+	display: block;
+	width: 80%;
+	background-color: var(--primary-color);
+	border: 1px solid var(--primary-color);
+	border-radius: 4px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px 0;
+	box-sizing: border-box;
+	color: var(--text-color-light);
+	cursor: pointer;
+	font-size: 12px;
+	font-weight: 400;
+	outline: none;
+	outline: 0;
+	padding: 10px 25px;
+	text-align: center;
+	transform: translateY(0);
+	transition: transform 150ms, box-shadow 150ms;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+
+	margin: auto;
+	margin-bottom: 10px;
+}
+
+.grid__footer-side > button:hover {
+	box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
+	transform: translateY(-2px);
 }
