--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -82,6 +82,7 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 5px;
 	min-width: 8rem;
+	max-width: 12rem;
 }
 
 .teamName {
